--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,13 +15,14 @@ source:
   sha256: e974b65d6116d540bc2c934c40c5552f64d7781b77c259a5b7724b1338c9e08e
 
 build:
+  merge_build_host: True  # [win]
   noarch: generic
   number: 1001
   rpaths:
     - lib/R/lib/
     - lib/
 requirements:
-  build:
+  host:
     - r-base
   run:
     - r-base
