--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = '1.2-3' %}
-
+{% set version = '1.3-1' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,44 +7,71 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: Lmoments_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/Lmoments_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/Lmoments/Lmoments_{{ version }}.tar.gz
-  sha256: e974b65d6116d540bc2c934c40c5552f64d7781b77c259a5b7724b1338c9e08e
+    - {{ cran_mirror }}/src/contrib/Lmoments_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/Lmoments/Lmoments_{{ version }}.tar.gz
+  sha256: 7c9d489a08f93fa5877e2f233ab9732e0d1b2761596b3f6ac91f2295e41a865d
 
 build:
   merge_build_host: True  # [win]
-  noarch: generic
-  number: 1001
+  number: 0
   rpaths:
     - lib/R/lib/
     - lib/
+
 requirements:
+  build:
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{ compiler('cxx') }}            # [not win]
+    - {{ compiler('m2w64_cxx') }}      # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
+    - r-rcpp
+    - r-rcpparmadillo
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
+    - r-rcpp
+    - r-rcpparmadillo
 
 test:
   commands:
-    - $R -e "library('Lmoments')"  # [not win]
+    - $R -e "library('Lmoments')"           # [not win]
     - "\"%R%\" -e \"library('Lmoments')\""  # [win]
 
 about:
-  home: http://www.tilastotiede.fi/juha_karvanen.html
+  home: http://users.jyu.fi/~jutakarv/
   license: GPL-2
   summary: Contains functions to estimate L-moments and trimmed L-moments from the data. Also
     contains functions to estimate the parameters of the normal polynomial quantile
     mixture and the Cauchy polynomial quantile mixture from L-moments and trimmed L-moments.
   license_family: GPL2
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
-    - dpryan79
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
+    - conda-forge/r
+
+# Package: Lmoments
+# Version: 1.3-1
+# Date: 2019-03-13
+# Title: L-Moments and Quantile Mixtures
+# Authors@R: c(person("Juha", "Karvanen", email = "juha.karvanen@iki.fi", role = c("cre", "aut")), person("Santeri", "Karppinen", email = "santeri.j.karppinen@jyu.fi", role = "aut"))
+# Maintainer: Juha Karvanen <juha.karvanen@iki.fi>
+# Description: Contains functions to estimate L-moments and trimmed L-moments from the data. Also contains functions to estimate the parameters of the normal polynomial quantile mixture and the Cauchy polynomial quantile mixture from L-moments and trimmed L-moments.
+# Imports: stats, Rcpp
+# LinkingTo: Rcpp, RcppArmadillo
+# License: GPL-2
+# URL: http://users.jyu.fi/~jutakarv/
+# NeedsCompilation: yes
+# Packaged: 2019-03-15 15:52:46 UTC; santeri
+# Repository: CRAN
+# Date/Publication: 2019-03-15 17:03:54 UTC
+# RoxygenNote: 6.1.1
+# Author: Juha Karvanen [cre, aut], Santeri Karppinen [aut]
